// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LGradient renders active 1`] = `
<body>
  <div>
    <div />
    <div />
    <div
      style="background: rgb(255, 255, 255); opacity: -1;"
    />
    <div
      style="background: rgb(0, 0, 0); opacity: -1;"
    />
  </div>
</body>
`;

exports[`LGradient renders inactive 1`] = `
<body>
  <div>
    <noscript />
  </div>
</body>
`;
